--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @layer base {
     body {
       @apply bg-blue-100;
-      @apply dark:bg-gray-800;
+      @apply dark:bg-slate-800;
     }
   }
   
