Major Change (see desc)
Major: complete the app, add class select - 11 and 12 has different subjects

Features: Add dark mode toggle

Misc: add Help section
Signed-off-by: soulr344 <soul@totsuka.gq>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+    * {
+        @apply transition-colors;
+    }
     body {
       @apply bg-blue-100;
       @apply dark:bg-slate-800;
