--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -15,6 +15,7 @@
       color: var(--menu-icon-bg);
       opacity: 0.8;
       transition: 250ms opacity;
+      color: var(--select-text-clr);
     }
 
     &:hover svg {
@@ -35,6 +36,8 @@
 
     background-color: transparent;
     border: none;
+
+    color: var(--select-text-clr);
   }
 }
 
