--- a/src/components/SubjectRow/SubjectRow.module.scss
+++ b/src/components/SubjectRow/SubjectRow.module.scss
@@ -1,11 +1,52 @@
-.subject-row {
+.row-container {
   display: flex;
-  gap: 0 0.5rem;
-  flex-wrap: wrap;
   width: 100%;
 
-  .flex-1 {
+  & > *:first-child {
+    flex: 2;
+  }
+
+  & > *:last-child {
     flex: 1;
-    width: 100%;
+  }
+
+  & > *:nth-child(3) {
+    flex: 1;
+    margin-inline: .5rem;
+  }
+
+  .break {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .row-container {
+    flex-wrap: wrap;
+    & > *:first-child {
+      flex: 1;
+      width: 100%;
+      min-width: unset !important;
+      margin-bottom: .2rem;
+    }
+    & > *:last-child {
+      flex: 1;
+    }
+
+    & > *:nth-child(3) {
+      flex: 1;
+      margin: 0;
+      margin-right: .5rem;
+    }  
+
+    & > *:nth-child(2) {
+      flex: 1;
+    }
+
+    .break {
+      display: block;
+      height: 0;
+      flex-basis: 100%;
+    }
   }
 }
