--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,6 @@
 .card {
   position: relative;
+  margin: 2rem 0;
 
   &::before {
     content: "";
@@ -28,10 +29,6 @@
     }
   }
 
-  .body {
-    margin-top: 1rem;
-  }
-
   .class-select-wrapper {
     width: fit-content;
   }
@@ -39,7 +36,7 @@
   .row-container {
     display: grid;
     grid-template-rows: repeat(6, 1fr);
-    gap: .6rem;
+    gap: 0.6rem;
 
     padding: 1rem 0;
 
