--- a/src/components/Modal/SettingsModal/SettingsModal.module.scss
+++ b/src/components/Modal/SettingsModal/SettingsModal.module.scss
@@ -22,6 +22,16 @@
   }
 }
 
+.body {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  h3 {
+    font-weight: 600;
+  }
+}
+
 .p {
   margin: 1rem 0;
   text-align: justify;
